--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </nav>
                 <button class="btn-menu"><span></span></button>
                 <p class="header-phone">
-                    <a href="#" class="header__wa"></a>
+                    <a href="#" class="header__wa" target="_blank"></a>
                     <a href="tel:+74955257007" class="call">
                         <i>Звоните, Пн-Пт: 9:00 - 18:00</i>
                         <strong>+7 (495) 525 70 07</strong>
@@ -109,12 +109,12 @@
                         Центральные <br> комуникации
                     </p>
                 </div>
-                <a href="#" class="btn btn-img">скачать презентацию <img src="img/presentation.png"
-                        alt="скачать презентацию"></a>
+                <button class="btn btn-img open-modal" data-modal="modal-present">скачать презентацию <img
+                        src="img/presentation.png" alt="скачать презентацию"></button>
             </div>
         </div>
         <div class="main-fixed">
-            <button class="main-fixed__btn">
+            <button class="main-fixed__btn open-modal" data-modal="modal-location">
                 <img src="img/pngwing.png" alt="img">
                 <b>Где мы?</b>
                 МКАД 91км
@@ -136,6 +136,28 @@
             </div>
             <div class="chuvaMeteoro"></div>
         </div>
+        <div class="main__scroll">
+            <svg id="eH4kXqtzlCD1" width="100px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 54 145" shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
+                <g clip-path="url(#eH4kXqtzlCD6)">
+                    <g>
+                        <path
+                            d="M27,142c-3.9782,0-7.7936-1.58-10.6066-4.393s-4.3934-6.629-4.3934-10.607v-18c0-3.978,1.5804-7.794,4.3934-10.6066C19.2064,95.5804,23.0218,94,27,94s7.7936,1.5804,10.6066,4.3934C40.4196,101.206,42,105.022,42,109v18c0,1.97-.388,3.92-1.1418,5.74s-1.8587,3.474-3.2516,4.867c-1.3929,1.392-3.0465,2.497-4.8664,3.251s-3.7704,1.142-5.7402,1.142Zm0-45c-3.1826,0-6.2348,1.2643-8.4853,3.515C16.2643,102.765,15,105.817,15,109v18c0,3.183,1.2643,6.235,3.5147,8.485C20.7652,137.736,23.8174,139,27,139s6.2348-1.264,8.4853-3.515C37.7357,133.235,39,130.183,39,127v-18c0-3.183-1.2643-6.235-3.5147-8.485C33.2348,98.2643,30.1826,97,27,97Z"
+                            fill="#b1cc0a" />
+                        <path id="eH4kXqtzlCD5"
+                            d="M27,113.5c-.3978,0-.7794-.158-1.0607-.439-.2813-.282-.4393-.663-.4393-1.061v-6c0-.398.158-.779.4393-1.061.2813-.281.6629-.439,1.0607-.439s.7794.158,1.0607.439c.2813.282.4393.663.4393,1.061v6c0,.398-.158.779-.4393,1.061-.2813.281-.6629.439-1.0607.439Z"
+                            fill="#b1cc0a" />
+                    </g>
+                    <clipPath id="eH4kXqtzlCD6">
+                        <rect width="54" height="54" rx="0" ry="0" transform="translate(0 91)" fill="#fff" />
+                    </clipPath>
+                </g>
+                <line x1="27" y1="1" x2="27" y2="69" fill="none" stroke="#b1cc0a" stroke-width="2"
+                    stroke-linecap="round" />
+                <script><![CDATA[(function (s, i, u, o, c, w, d, t, n, x, e, p, a, b) { w[o] = w[o] || {}; w[o][s] = w[o][s] || []; w[o][s].push(i); e = d.createElementNS(n, t); e.async = true; e.setAttributeNS(x, 'href', [u, s, '.', 'j', 's', '?', 'v', '=', c].join('')); e.setAttributeNS(null, 'src', [u, s, '.', 'j', 's', '?', 'v', '=', c].join('')); p = d.getElementsByTagName(t)[0]; p.parentNode.insertBefore(e, p); })('5c7f360c', { "root": "eH4kXqtzlCD1", "version": "2022-05-04", "animations": [{ "elements": { "eH4kXqtzlCD5": { "transform": { "data": { "t": { "x": -27, "y": -109 } }, "keys": { "o": [{ "t": 0, "v": { "x": 27, "y": 109, "type": "corner" } }, { "t": 1480, "v": { "x": 27, "y": 129.625277, "type": "corner" }, "e": [0.445, 0.05, 0.55, 0.95] }, { "t": 3000, "v": { "x": 27, "y": 109, "type": "corner" } }] } } } }, "s": "MFDA1ZDhmMzY3ODg5ODTZKVDc1ODg3ZDgzODIFzNlY0ZTQ3NDQ0NDQ0ENDAzNjc4N2Q4Njc5NCzc4ODdkODM4MjM2NGAU0NTQwMzY3ZDg4NzkX4Njc1ODg3ZDgzODI4HNzM2NGU0NDQwMzY3YSTdkODA4MDM2NGU0NTMQwMzY3NTgwODhJNzkP4NjgyNzU4ODc5MzY0WZTdhNzU4MDg3Nzk0MCDM2ODc4NDc5Nzk3ODRM2NGU0NTQwMzY3YTgK0ODczNjRlTzQ1NDQ0MNE45MQ|" }], "options": "MKDAxMDg4MmY4MDgxNmEU3ZjgxMmY0NzJmNzkL3YzZlNzEyZjhh" }, 'https://cdn.svgator.com/ply/', '__SVGATOR_PLAYER__', '2022-05-04', window, document, 'script', 'http://www.w3.org/2000/svg', 'http://www.w3.org/1999/xlink')
+                    ]]></script>
+            </svg>
+        </div>
     </main>
 
     <section class="business">
@@ -147,7 +169,7 @@
                 <div class="business-item">
                     <div class="business-item__img">
                         <img src="img/img.jpg" alt="img">
-                        <a href="#" class="btn btn-sm">подробнее</a>
+                        <button class="btn btn-sm open-modal" data-modal="modal-info">подробнее</button>
                     </div>
                     <p class="business-item__num">2 000 000</p>
                     <p class="business-item__text">
@@ -157,7 +179,7 @@
                 <div class="business-item">
                     <div class="business-item__img">
                         <img src="img/img.jpg" alt="img">
-                        <a href="#" class="btn btn-sm">подробнее</a>
+                        <button class="btn btn-sm open-modal" data-modal="modal-info-2">подробнее</button>
                     </div>
                     <p class="business-item__num">9 325 000</p>
                     <p class="business-item__text">
@@ -167,7 +189,7 @@
                 <div class="business-item">
                     <div class="business-item__img">
                         <img src="img/img.jpg" alt="img">
-                        <a href="#" class="btn btn-sm">подробнее</a>
+                        <button class="btn btn-sm open-modal" data-modal="modal-info-3">подробнее</button>
                     </div>
                     <p class="business-item__num">2 123</p>
                     <p class="business-item__text">
@@ -195,6 +217,10 @@
             </p>
             <p>Задать все интересующие вопросы администратору и выберете участок для вас и ваших клинтов.</p>
             <img src="img/scheme.jpg" class="scheme__img" alt="scheme">
+            <img src="img/scheme_car-1.svg" class="scheme__img car-1" alt="scheme">
+            <img src="img/scheme_car-2.svg" class="scheme__img car-2" alt="scheme">
+            <img src="img/scheme_car-3.svg" class="scheme__img car-3" alt="scheme">
+            
             <button class="btn open-modal" data-modal="modal-form">Арендовать участок</button>
         </div>
     </section>
@@ -412,7 +438,7 @@
                 Выставка малоэтажного домостроения
                 на "Мытищинской ярмарке"
             </p>
-            <button class="btn open-modal" data-modal="modal-location">проложить маршрут</button>
+            <a href="#" class="btn open-modal" data-modal="modal-location">проложить маршрут</a>
             <div class="contact">
                 <a href="tel:+74955257007" class="phone">+ 7 (495) 525-70-07</a>
                 <a href="#">ПЕРЕЗВОНИТЬ ВАМ?</a>
@@ -420,7 +446,7 @@
         </div>
     </footer>
 
-    <div class="modal" id="modal-video">
+    <div class="modal modal-video" id="modal-video">
         <button class="modal-close">&#x2715</button>
         <div class="modal-content">
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/qvn-ryZjeIM"
@@ -430,7 +456,7 @@
         </div>
     </div>
 
-    <div class="modal" id="modal-form">
+    <div class="modal modal-form" id="modal-form">
         <button class="modal-close">&#x2715</button>
         <div class="modal-content">
             <div class="modal-title">
@@ -453,7 +479,7 @@
         </div>
     </div>
 
-    <div class="modal" id="modal-location">
+    <div class="modal modal-location" id="modal-location">
         <button class="modal-close">&#x2715</button>
         <div class="modal-content">
             <div class="modal-title">
@@ -476,10 +502,74 @@
         </div>
     </div>
 
+    <div class="modal modal-present" id="modal-present">
+        <button class="modal-close">&#x2715</button>
+        <div class="modal-content">
+            <div class="modal-title">
+                <p class="headline">
+                    Приглашение на <b>выставку домов</b> в москве
+                </p>
+                <form class="form">
+                    <input type="hidden" name="headline" value="Заказан звонок">
+                    <input type="text" id="u-name" name="u-name" required placeholder="Как вас зовут?">
+                    <input type="tel" name="u-phone" id="u-phone" required placeholder="Ваш номер телефона">
+                    <div class="inp-rad">
+                        <input type="checkbox" name="check" id="radcheck2">
+                        <label for="radcheck2">
+                            Нажимая кнопку вы соглашаетесь с условиями <a href="#">Политики конфиденциальности</a>
+                        </label>
+                    </div>
+                    <button type="submit" class="btn">Отправить</button>
+                </form>
+            </div>
+            <img src="img/book.png" class="modal-img book" alt="map">
+        </div>
+    </div>
+
+    <div class="modal modal-info" id="modal-info">
+        <button class="modal-close">&#x2715</button>
+        <div class="modal-content">
+            <img src="img/img.jpg" class="modal-img info" alt="map">
+            <div class="modal-title">
+                <p class="number">2 000 000</p>
+                <p class="number__text">
+                    Посетителей в месяц - постоянных, платёжеспособных, лояльных к нашей компании
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="modal modal-info" id="modal-info-2">
+        <button class="modal-close">&#x2715</button>
+        <div class="modal-content">
+            <img src="img/img.jpg" class="modal-img info" alt="map">
+            <div class="modal-title">
+                <p class="number">9 325 000</p>
+                <p class="number__text">
+                    Ежедневных просмотров рекламных площадок, расположенных на МКАД
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="modal modal-info" id="modal-info-3">
+        <button class="modal-close">&#x2715</button>
+        <div class="modal-content">
+            <img src="img/img.jpg" class="modal-img info" alt="map">
+            <div class="modal-title">
+                <p class="number">2 123</p>
+                <p class="number__text">
+                    Предварительные заявки на просмотр строений от "тёплых" клиентов</p>
+            </div>
+        </div>
+    </div>
+
     <script src="./js/jquery-3.4.1.min.js" defer></script>
     <script src="./js/jquery.inputmask.min.js" defer></script>
     <script src="./js/slick.min.js" defer></script>
-    <script src="./js/sky.js" defer></script>
+    <!-- <script src="./js/sky.js" defer></script> -->
     <script src="./js/scripts.js?ver-4567" defer></script>
 
 </body>
